Opened 16 years ago
Closed 16 years ago
#3919 closed bug (fixed)
BListView does not Invoke when double cliking
Reported by: | romain | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
seen in hrev30699
Double clicking on an item of a BListView does not trigger invocation. This probably appeared with changes in hrev30149, but the problem comes from the reset of fTrack->item_index in MouseUp. Releasing the mouse does not mean that the selected item is no more active. Also we do not need this to handle dragndrop status since try_drag is used for that. The attached patch should fix this
I reproduce this very easily on a vmware install in the printer preference app: double click on one printer does not make it the default one.
Attachments (1)
Change History (4)
by , 16 years ago
Attachment: | 20090510-listview.diff added |
---|
comment:1 by , 16 years ago
Description: | modified (diff) |
---|
comment:2 by , 16 years ago
Status: | new → assigned |
---|
comment:3 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Thanks for your patch! The problem is fixed in hrev30782. Technically, only the part in MouseUp() would have been needed to fix the problem, but the check you removed in MouseMoved() was actually done twice (again in _TryInitiateDrag() which I removed), but you probably noticed that yourself.
A small tip: if you write "rev30699" as hrev30699, Trac is smart enough to create a link to the actual changes (I've already changed your description, in case you wonder).