* Applied a changed patch by Romain that fixes the non-working double click in   BListView. This fixes bug #3919. Got rid of the _TryInitiateDrag() method,   and let MouseMoved() do it all. * Style cleanup of the header, automatic whitespace cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30782 a95241bf-73f2-0310-859d-f6bbb57e9c96